# cockpit

./: Makefile.am  setup.sh
pkg/lib/: custom_colors.scss  page.scss
pkg/lib/patternfly/: patternfly-overrides-variables.scss
pkg/metrics/: metrics.scss
pkg/networkmanager/: networking.scss
pkg/packagekit/: updates.scss
pkg/static/: login.css
pkg/storaged/: storage.scss
pkg/systemd/: hwinfo.scss  overview.scss
src/branding/elementos/: Makefile.am  branding.css
