elementosbrandingdir = $(datadir)/cockpit/branding/elementos

elementosbranding_DATA = \
	src/branding/elementos/apple-touch-icon.png \
	src/branding/elementos/branding.css \
	src/branding/elementos/favicon.ico \
	src/branding/elementos/logo.png \
	$(NULL)

EXTRA_DIST += \
	$(elementosbranding_DATA) \
	src/branding/elementos/logo.svg \
	$(NULL)
